changes about section

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 DSA Journey</a>
                         </div>
                     </div>
-                    <div class="row mt-5 ">
+                    <!-- <div class="row mt-5 mb-5 ">
                         <div class="col-md-2  offset-md-2 abouticons">
                             <a href="https://github.com/Aryan-Kohli" target="_blank"> <img src="./icons/github.png"
                                     width="100px" height="100px" class="abouticonimg"></a>
@@ -148,7 +148,7 @@
                             <a href="https://twitter.com/AryanKohli1908" target="_blank"><img src="./icons/twitter.webp"
                                     width="100px" height="100px" class="abouticonimg"></a>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
