--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                     <div class="row aboutpoints mt-2">
                         <div class="col">
                             <i class="fa-solid fa-star" style="color: #000000;"></i>&ThickSpace;<a
-                                href="https://drive.google.com/file/d/1J2mXYJ4GuoxpvSfdPKARS1JA48jLUexy/view?usp=sharing">
+                                href="https://drive.google.com/file/d/1J2mXYJ4GuoxpvSfdPKARS1JA48jLUexy/view?usp=sharing"
+                                target="_blank">
                                 VIEW RESUME</a> , <a href="https://leetcode.com/aryan_kohli19/" target="_blank">Track
                                 DSA Journey</a>
                         </div>
@@ -259,7 +260,8 @@
                                 <h5 class="card-title">LANDING PAGE</h5>
                                 <p class="card-text">GYM Promotional Landing Page .
                                 </p>
-                                <a href="https://aryan-kohli.github.io/Gym-Landing-page/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli.github.io/Gym-Landing-page/" class="btn btn-warning"
+                                    target="_blank">See
                                     Project
                                 </a>
                             </div>
@@ -273,7 +275,8 @@
                                 <h5 class="card-title">Calculator</h5>
                                 <p class="card-text">Calculator For basic Calculations
                                 </p>
-                                <a href="https://aryan-kohli.github.io/Calculator/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli.github.io/Calculator/" class="btn btn-warning"
+                                    target="_blank">See
                                     Project
                                 </a>
                             </div>
@@ -286,7 +289,8 @@
                                 <h5 class="card-title">Blackjack</h5>
                                 <p class="card-text">A game that can be played during free time.
                                 </p>
-                                <a href="https://aryan-kohli.github.io/blackjack/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli.github.io/blackjack/" class="btn btn-warning"
+                                    target="_blank">See
                                     Project
                                 </a>
                             </div>
@@ -300,7 +304,7 @@
                                 <p class="card-text">Generates Random Password for your Security.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/-Random_Password_Generator/"
-                                    class="btn btn-warning">See Project
+                                    class="btn btn-warning" target="_blank">See Project
                                 </a>
                             </div>
                         </div>
@@ -312,7 +316,8 @@
                                 <h5 class="card-title">ToDo-List</h5>
                                 <p class="card-text">Todo list for keeping track of yor routine.
                                 </p>
-                                <a href="https://aryan-kohli-todo-list.netlify.app/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli-todo-list.netlify.app/" class="btn btn-warning"
+                                    target="_blank">See
                                     Project
                                 </a>
                             </div>
@@ -325,7 +330,8 @@
                                 <h5 class="card-title">Cricket Quiz</h5>
                                 <p class="card-text">Are you a crazy fan of cricket check here.
                                 </p>
-                                <a href="https://aryan-kohli.github.io/Cricket-Quiz/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli.github.io/Cricket-Quiz/" class="btn btn-warning"
+                                    target="_blank">See
                                     Project
                                 </a>
                             </div>
@@ -338,7 +344,8 @@
                                 <h5 class="card-title">Basketball Score Counter</h5>
                                 <p class="card-text">Here , you can keep track of a basketball match score
                                 </p>
-                                <a href="https://aryan-kohli.github.io/basketball/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli.github.io/basketball/" class="btn btn-warning"
+                                    target="_blank">See
                                     Project
                                 </a>
                             </div>
@@ -480,7 +487,7 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            <!-- <div class="projectcards">
+            <!--<div class="projectcards">
                 <div class="row ">
                     <div class="col-4 mt-5 md-5">
 
