added boxcolor project

--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                 </div>
             </div>
             <div id="carouselExample" class="carousel slide  ">
+
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="card" style="width: 18rem;">
@@ -379,6 +380,20 @@
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Tribute-page/" target="_blank"
                                     class="btn btn-warning">See Project
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./projects/boxcolor.jpg" class="card-img-top" alt="..." width="250px"
+                                height="250px">
+                            <div class="card-body">
+                                <h5 class="card-title">Hidden Text</h5>
+                                <p class="card-text">Play Hidden text Game
+                                </p>
+                                <a href="https://aryan-kohli.github.io/BoxColor/" class="btn btn-warning">See
+                                    Project
                                 </a>
                             </div>
                         </div>
