added new projects
added meme generator, todo list , hidden text game

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="row aboutpoints mt-2">
                         <div class="col-md"> <i class="fa-solid fa-arrow-right-long" style="color: #000000;"></i>
-                            <span class="aboutcolor">Age : </span>19
+                            <span class="aboutcolor">Age : </span>20
                         </div>
                         <div class="col-md"> <i class="fa-solid fa-arrow-right-long" style="color: #000000;"></i>
                             <span class="aboutcolor">City : </span> New delhi, India
@@ -126,30 +126,13 @@
                     <div class="row aboutpoints mt-2">
                         <div class="col">
                             <i class="fa-solid fa-star" style="color: #000000;"></i>&ThickSpace;<a
-                                href="https://drive.google.com/file/d/1S99NX7GgzoTGu3KZBq_3bVely7gQw6tt/view?usp=sharing"
+                                href="https://drive.google.com/file/d/1ierESsSe5XEPfeB1_UbWui6UWsFiZ9qC/view?usp=sharing"
                                 target="_blank">
                                 VIEW RESUME</a> , <a href="https://leetcode.com/aryan_kohli19/" target="_blank">Track
                                 DSA Journey</a>
                         </div>
                     </div>
-                    <!-- <div class="row mt-5 mb-5 ">
-                        <div class="col-md-2  offset-md-2 abouticons">
-                            <a href="https://github.com/Aryan-Kohli" target="_blank"> <img src="./icons/github.png"
-                                    width="100px" height="100px" class="abouticonimg"></a>
-                        </div>
-                        <div class="col-md-2 abouticons">
-                            <a href="https://leetcode.com/aryan_kohli19/" target="_blank"><img
-                                    src="./icons/leetcode.png" width="100px" height="100px" class="abouticonimg"></a>
-                        </div>
-                        <div class="col-md-2 abouticons">
-                            <a href="https://www.linkedin.com/in/aryan-kohli-4b349323b/" target="_blank"><img
-                                    src="./icons/linkedin.png" width="100px" height="100px" class="abouticonimg"></a>
-                        </div>
-                        <div class="col-md-2 abouticons">
-                            <a href="https://twitter.com/AryanKohli1908" target="_blank"><img src="./icons/twitter.webp"
-                                    width="100px" height="100px" class="abouticonimg"></a>
-                        </div>
-                    </div> -->
+
 
                 </div>
             </div>
@@ -241,6 +224,49 @@
                 <div class="row ">
                     <div class="col-4 mt-5 md-5">
                         <div class="card" style="width: 18rem;">
+                            <img src="./projects/todo.jpg" class="card-img-top" alt="..." width="250px" height=>
+                            <div class="card-body">
+                                <h5 class="card-title">ToDo-List</h5>
+                                <p class="card-text">Todo list for keeping track of yor routine.
+                                </p>
+                                <a href="https://aryan-kohli.github.io/Todo2/ " class="btn btn-warning"
+                                    target="_blank">See
+                                    Project
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 mt-5 md-5">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./projects/meme_generator.jpg" class="card-img-top" alt="..." width="250px"
+                                height=>
+                            <div class="card-body">
+                                <h5 class="card-title">Meme Generator </h5>
+                                <p class="card-text">Download your Customized memes.
+                                </p>
+                                <a href="https://aryan-kohli.github.io/Meme_Generator/ " class="btn btn-warning"
+                                    target="_blank">See
+                                    Project
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 mt-5 md-5">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./projects/boxcolor.jpg" class="card-img-top" alt="..." width="250px" height=>
+                            <div class="card-body">
+                                <h5 class="card-title">Hidden Text</h5>
+                                <p class="card-text">Play the hidden Text game.
+                                </p>
+                                <a href="https://aryan-kohli.github.io/BoxColor/ " class="btn btn-warning"
+                                    target="_blank">See
+                                    Project
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 mt-5 md-5">
+                        <div class="card" style="width: 18rem;">
                             <img src="./projects/tribute.jpg" class="card-img-top" alt="..." width="250px"
                                 height="250px">
                             <div class="card-body">
@@ -309,20 +335,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/todo.jpg" class="card-img-top" alt="..." width="250px" height=>
-                            <div class="card-body">
-                                <h5 class="card-title">ToDo-List</h5>
-                                <p class="card-text">Todo list for keeping track of yor routine.
-                                </p>
-                                <a href="https://aryan-kohli-todo-list.netlify.app/" class="btn btn-warning"
-                                    target="_blank">See
-                                    Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+
                     <div class="col-4 mt-5 md-5">
                         <div class="card" style="width: 18rem;">
                             <img src="./projects/cricket.jpg" class="card-img-top" alt="..." width="250px" height=>
@@ -358,7 +371,7 @@
             </div>
         </div>
     </div>
-    <div class="projects2" id="pprojects">
+    <div class="projects2">
         <div class="container">
             <div class="projectshead">
                 <div class="row ">
@@ -371,6 +384,34 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./projects/todo.jpg" class="card-img-top" alt="..." width="250px" height=>
+                            <div class="card-body">
+                                <h5 class="card-title">ToDo-List</h5>
+                                <p class="card-text">Todo list for keeping track of yor routine.
+                                </p>
+                                <a href="https://aryan-kohli.github.io/Todo2/" class="btn btn-warning"
+                                    target="_blank">See
+                                    Project
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item ">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./projects/meme_generator.jpg" class="card-img-top" alt="..." width="250px"
+                                height="250px">
+                            <div class="card-body">
+                                <h5 class="card-title">Meme Generator</h5>
+                                <p class="card-text">Download your Customized memes..
+                                </p>
+                                <a href="https://aryan-kohli.github.io/Meme_Generator/" target="_blank"
+                                    class="btn btn-warning">See Project
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item ">
                         <div class="card" style="width: 18rem;">
                             <img src="./projects/tribute.jpg" class="card-img-top" alt="..." width="250px"
                                 height="250px">
@@ -392,7 +433,8 @@
                                 <h5 class="card-title">Hidden Text</h5>
                                 <p class="card-text">Play Hidden text Game
                                 </p>
-                                <a href="https://aryan-kohli.github.io/BoxColor/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli.github.io/BoxColor/" class="btn btn-warning"
+                                    target="_blank">See
                                     Project
                                 </a>
                             </div>
@@ -405,7 +447,8 @@
                                 <h5 class="card-title">LANDING PAGE</h5>
                                 <p class="card-text">GYM Promotional Landing Page .
                                 </p>
-                                <a href="https://aryan-kohli.github.io/Gym-Landing-page/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli.github.io/Gym-Landing-page/" class="btn btn-warning"
+                                    target="_blank">See
                                     Project
                                 </a>
                             </div>
@@ -419,7 +462,8 @@
                                 <h5 class="card-title">Calculator</h5>
                                 <p class="card-text">Calculator For basic Calculations
                                 </p>
-                                <a href="https://aryan-kohli.github.io/Calculator/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli.github.io/Calculator/" class="btn btn-warning"
+                                    target="_blank">See
                                     Project
                                 </a>
                             </div>
@@ -432,7 +476,8 @@
                                 <h5 class="card-title">Blackjack</h5>
                                 <p class="card-text">A game that can be played during free time.
                                 </p>
-                                <a href="https://aryan-kohli.github.io/blackjack/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli.github.io/blackjack/" class="btn btn-warning"
+                                    target="_blank">See
                                     Project
                                 </a>
                             </div>
@@ -446,24 +491,12 @@
                                 <p class="card-text">Generates Random Password for your Security.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/-Random_Password_Generator/"
-                                    class="btn btn-warning">See Project
+                                    class="btn btn-warning" target="_blank">See Project
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/todo.jpg" class="card-img-top" alt="..." width="250px" height=>
-                            <div class="card-body">
-                                <h5 class="card-title">ToDo-List</h5>
-                                <p class="card-text">Todo list for keeping track of yor routine.
-                                </p>
-                                <a href="https://aryan-kohli-todo-list.netlify.app/" class="btn btn-warning">See
-                                    Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+
                     <div class="carousel-item">
                         <div class="card" style="width: 18rem;">
                             <img src="./projects/cricket.jpg" class="card-img-top" alt="..." width="250px" height=>
@@ -471,7 +504,8 @@
                                 <h5 class="card-title">Cricket Quiz</h5>
                                 <p class="card-text">Are you a crazy fan of cricket check here.
                                 </p>
-                                <a href="https://aryan-kohli.github.io/Cricket-Quiz/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli.github.io/Cricket-Quiz/" class="btn btn-warning"
+                                    target="_blank">See
                                     Project
                                 </a>
                             </div>
