new projects added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PortFolio</title>
+    <title>ARYAN KOHLI | PORTFOLIO &hearts;</title>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="hero.css">
@@ -20,6 +20,7 @@
                 <a class="navbar-brand" href="#">ARYAN KOHLI</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -126,7 +127,7 @@
                     <div class="row aboutpoints mt-2">
                         <div class="col">
                             <i class="fa-solid fa-star" style="color: #000000;"></i>&ThickSpace;<a
-                                href="https://drive.google.com/file/d/1ierESsSe5XEPfeB1_UbWui6UWsFiZ9qC/view?usp=sharing"
+                                href="https://drive.google.com/drive/folders/1wITlkFOd0NAf_Btd_HL_8_fTttedcLOC?usp=sharing"
                                 target="_blank">
                                 VIEW RESUME</a> , <a href="https://leetcode.com/aryan_kohli19/" target="_blank">Track
                                 DSA Journey</a>
@@ -224,13 +225,42 @@
                 <div class="row ">
                     <div class="col-4 mt-5 md-5">
                         <div class="card" style="width: 18rem;">
+                            <img src="./projects/chatapp.jpg" class="card-img-top" alt="..." width="250px" height=>
+                            <div class="card-body">
+                                <h5 class="card-title">Real Time Chat Application</h5>
+                                <p class="card-text">Do group chat in real time. see live no. of users
+                                </p>
+                                <a href="https://aryan-kohli-chat-app.netlify.app/ " class="btn btn-warning"
+                                    target="_blank">View
+                                    Project
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 mt-5 md-5">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./projects/optimisticAir.jpg" class="card-img-top" alt="..." width="250px"
+                                height=>
+                            <div class="card-body">
+                                <h5 class="card-title">Audio Visual Depression Test</h5>
+                                <p class="card-text">Conducts AV test for depressed people.
+                                </p>
+                                <a href="https://optimistic-air.netlify.app/" class="btn btn-warning"
+                                    target="_blank">View
+                                    Project
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 mt-5 md-5">
+                        <div class="card" style="width: 18rem;">
                             <img src="./projects/todo.jpg" class="card-img-top" alt="..." width="250px" height=>
                             <div class="card-body">
                                 <h5 class="card-title">ToDo-List</h5>
                                 <p class="card-text">Todo list for keeping track of yor routine.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Todo2/ " class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -245,7 +275,7 @@
                                 <p class="card-text">Download your Customized memes.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Meme_Generator/ " class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -259,7 +289,7 @@
                                 <p class="card-text">Play the hidden Text game.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/BoxColor/ " class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -274,7 +304,7 @@
                                 <p class="card-text">Tribute page of legend sidhu moosewala .
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Tribute-page/" target="_blank"
-                                    class="btn btn-warning">See Project
+                                    class="btn btn-warning">View Project
                                 </a>
                             </div>
                         </div>
@@ -287,7 +317,7 @@
                                 <p class="card-text">GYM Promotional Landing Page .
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Gym-Landing-page/" class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -302,7 +332,7 @@
                                 <p class="card-text">Calculator For basic Calculations
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Calculator/" class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -316,7 +346,7 @@
                                 <p class="card-text">A game that can be played during free time.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/blackjack/" class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -330,7 +360,7 @@
                                 <p class="card-text">Generates Random Password for your Security.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/-Random_Password_Generator/"
-                                    class="btn btn-warning" target="_blank">See Project
+                                    class="btn btn-warning" target="_blank">View Project
                                 </a>
                             </div>
                         </div>
@@ -344,7 +374,7 @@
                                 <p class="card-text">Are you a crazy fan of cricket check here.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Cricket-Quiz/" class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -358,7 +388,7 @@
                                 <p class="card-text">Here , you can keep track of a basketball match score
                                 </p>
                                 <a href="https://aryan-kohli.github.io/basketball/" class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -385,13 +415,42 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="card" style="width: 18rem;">
+                            <img src="./projects/chatapp.jpg" class="card-img-top" alt="..." width="250px" height=>
+                            <div class="card-body">
+                                <h5 class="card-title">Real Time Chat Application</h5>
+                                <p class="card-text">Do group chat in real time. see live no. of users
+                                </p>
+                                <a href="https://aryan-kohli-chat-app.netlify.app/" class="btn btn-warning"
+                                    target="_blank">View
+                                    Project
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item ">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./projects/optimisticAir.jpg" class="card-img-top" alt="..." width="250px"
+                                height=>
+                            <div class="card-body">
+                                <h5 class="card-title">Audio Visual Depression Test</h5>
+                                <p class="card-text">Conducts AV test for depressed people.
+                                </p>
+                                <a href="https://aryan-kohli.github.io/Todo2/" class="btn btn-warning"
+                                    target="_blank">View
+                                    Project
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item ">
+                        <div class="card" style="width: 18rem;">
                             <img src="./projects/todo.jpg" class="card-img-top" alt="..." width="250px" height=>
                             <div class="card-body">
                                 <h5 class="card-title">ToDo-List</h5>
                                 <p class="card-text">Todo list for keeping track of yor routine.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Todo2/" class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -406,7 +465,7 @@
                                 <p class="card-text">Download your Customized memes..
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Meme_Generator/" target="_blank"
-                                    class="btn btn-warning">See Project
+                                    class="btn btn-warning">View Project
                                 </a>
                             </div>
                         </div>
@@ -420,7 +479,7 @@
                                 <p class="card-text">Tribute page of legend sidhu moosewala .
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Tribute-page/" target="_blank"
-                                    class="btn btn-warning">See Project
+                                    class="btn btn-warning">View Project
                                 </a>
                             </div>
                         </div>
@@ -434,7 +493,7 @@
                                 <p class="card-text">Play Hidden text Game
                                 </p>
                                 <a href="https://aryan-kohli.github.io/BoxColor/" class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -448,7 +507,7 @@
                                 <p class="card-text">GYM Promotional Landing Page .
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Gym-Landing-page/" class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -463,7 +522,7 @@
                                 <p class="card-text">Calculator For basic Calculations
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Calculator/" class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -477,7 +536,7 @@
                                 <p class="card-text">A game that can be played during free time.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/blackjack/" class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -491,7 +550,7 @@
                                 <p class="card-text">Generates Random Password for your Security.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/-Random_Password_Generator/"
-                                    class="btn btn-warning" target="_blank">See Project
+                                    class="btn btn-warning" target="_blank">View Project
                                 </a>
                             </div>
                         </div>
@@ -505,7 +564,7 @@
                                 <p class="card-text">Are you a crazy fan of cricket check here.
                                 </p>
                                 <a href="https://aryan-kohli.github.io/Cricket-Quiz/" class="btn btn-warning"
-                                    target="_blank">See
+                                    target="_blank">View
                                     Project
                                 </a>
                             </div>
@@ -518,7 +577,7 @@
                                 <h5 class="card-title">Basketball Score Counter</h5>
                                 <p class="card-text">Here , you can keep track of a basketball match score
                                 </p>
-                                <a href="https://aryan-kohli.github.io/basketball/" class="btn btn-warning">See
+                                <a href="https://aryan-kohli.github.io/basketball/" class="btn btn-warning">View
                                     Project
                                 </a>
                             </div>
