--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="hero.css">
+    <link rel="shortcut icon" href="icons/Asvg.svg" type="svg">
 
 </head>
 
@@ -15,13 +16,15 @@
 
 
     <div class="header">
-        <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary" id="navbar">
+        <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary navbar-scrolled" id="navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">ARYAN KOHLI</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 
-                    <span class="navbar-toggler-icon"></span>
+                    <h1 class="navhamburger">
+                        <i class="fa-solid fa-bars"></i>
+                    </h1>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -46,6 +49,13 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#connect">LINKS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link resumeNav"
+                                href="https://drive.google.com/drive/u/1/folders/1wITlkFOd0NAf_Btd_HL_8_fTttedcLOC?usp=sharing"
+                                target="_blank">
+                                View
+                                Resume</a>
                         </li>
                     </ul>
                 </div>
@@ -306,13 +316,13 @@
                     </div>
                 </div>
             </div>
-            <div class="projectsSubhead">
+            <!-- <div class="projectsSubhead">
                 <div class="row ">
                     <div class="col-md-5 majorprojecthead">
                         <h1>Major Projects:</h1>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="projectcards">
                 <div class="row">
                     <div class="col-md-5 mt-5 md-5">
@@ -336,7 +346,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-5 mt-5 md-5">
+                    <div class="col-md-5 offset-md-2 mt-5 md-5">
                         <div class="card">
                             <img src="./projects/attendwell.png" class="card-img-top2" alt="...">
                             <div class="card-body">
@@ -384,175 +394,14 @@
             </div>
             <div class="">
                 <div class="row ">
-                    <div class="col-md-5 minorprojecthead">
-                        <h1>Practice Projects:</h1>
+                    <div class="col-md-5 viewPractice">
+                        <a href="/practiceProjects.html">
+                            <h1>View Practice Projects <i class="fa-solid fa-up-right-from-square fa-2xs"></i></h1>
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="projectcards">
-                <div class="row ">
 
-                    <div class="col-md-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/chatapp.jpg" class="card-img-top" alt="..." width="250px" height=>
-                            <div class="card-body">
-                                <h5 class="card-title">Real Time Chat Application</h5>
-                                <p class="card-text">Do group chat in real time. see live no. of users
-                                </p>
-                                <a href="https://aryan-kohli-chat-app.netlify.app/ " class="btn btn-outline-danger"
-                                    target="_blank">View
-                                    Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/todo.jpg" class="card-img-top" alt="..." width="250px" height=>
-                            <div class="card-body">
-                                <h5 class="card-title">ToDo-List</h5>
-                                <p class="card-text">Todo list for keeping track of yor routine.
-                                </p>
-                                <a href="https://aryan-kohli.github.io/Todo2/ " class="btn btn-outline-danger"
-                                    target="_blank">View
-                                    Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/meme_generator.jpg" class="card-img-top" alt="..." width="250px"
-                                height=>
-                            <div class="card-body">
-                                <h5 class="card-title">Meme Generator </h5>
-                                <p class="card-text">Download your Customized memes.
-                                </p>
-                                <a href="https://aryan-kohli.github.io/Meme_Generator/ " class="btn btn-outline-danger"
-                                    target="_blank">View
-                                    Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/boxcolor.jpg" class="card-img-top" alt="..." width="250px" height=>
-                            <div class="card-body">
-                                <h5 class="card-title">Hidden Text</h5>
-                                <p class="card-text">Play the hidden Text game.
-                                </p>
-                                <a href="https://aryan-kohli.github.io/BoxColor/ " class="btn btn-outline-danger"
-                                    target="_blank">View
-                                    Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/tribute.jpg" class="card-img-top" alt="..." width="250px"
-                                height="250px">
-                            <div class="card-body">
-                                <h5 class="card-title">TRIBUTE PAGE</h5>
-                                <p class="card-text">Tribute page of legend sidhu moosewala .
-                                </p>
-                                <a href="https://aryan-kohli.github.io/Tribute-page/" target="_blank"
-                                    class="btn btn-outline-danger">View Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/gym.avif" class="card-img-top" alt="..." width="250px" height="250px">
-                            <div class="card-body">
-                                <h5 class="card-title">LANDING PAGE</h5>
-                                <p class="card-text">GYM Promotional Landing Page .
-                                </p>
-                                <a href="https://aryan-kohli.github.io/Gym-Landing-page/" class="btn btn-outline-danger"
-                                    target="_blank">View
-                                    Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/calculator.jpg" class="card-img-top" alt="..." width="250px"
-                                height="250px">
-                            <div class="card-body">
-                                <h5 class="card-title">Calculator</h5>
-                                <p class="card-text">Calculator For basic Calculations
-                                </p>
-                                <a href="https://aryan-kohli.github.io/Calculator/" class="btn btn-outline-danger"
-                                    target="_blank">View
-                                    Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/blackjack.jpg" class="card-img-top" alt="..." width="250px" height=>
-                            <div class="card-body">
-                                <h5 class="card-title">Blackjack</h5>
-                                <p class="card-text">A game that can be played during free time.
-                                </p>
-                                <a href="https://aryan-kohli.github.io/blackjack/" class="btn btn-outline-danger"
-                                    target="_blank">View
-                                    Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/password.jpg" class="card-img-top" alt="..." width="250px" height=>
-                            <div class="card-body">
-                                <h5 class="card-title">Random Password Generator</h5>
-                                <p class="card-text">Generates Random Password for your Security.
-                                </p>
-                                <a href="https://aryan-kohli.github.io/-Random_Password_Generator/"
-                                    class="btn btn-outline-danger" target="_blank">View Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/cricket.jpg" class="card-img-top" alt="..." width="250px" height=>
-                            <div class="card-body">
-                                <h5 class="card-title">Cricket Quiz</h5>
-                                <p class="card-text">Are you a crazy fan of cricket check here.
-                                </p>
-                                <a href="https://aryan-kohli.github.io/Cricket-Quiz/" class="btn btn-outline-danger"
-                                    target="_blank">View
-                                    Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mt-5 md-5">
-                        <div class="card" style="width: 18rem;">
-                            <img src="./projects/basketball.jpg" class="card-img-top" alt="..." width="250px" height=>
-                            <div class="card-body">
-                                <h5 class="card-title">Basketball Score Counter</h5>
-                                <p class="card-text">Here , you can keep track of a basketball match score
-                                </p>
-                                <a href="https://aryan-kohli.github.io/basketball/" class="btn btn-outline-danger"
-                                    target="_blank">View
-                                    Project
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-                </div>
-            </div>
         </div>
     </div>
 
