--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             <div class="">
                 <div class="row ">
                     <div class="col-md-5 viewPractice">
-                        <a href="/practiceProjects.html">
+                        <a href="projects.html">
                             <h1>View Practice Projects <i class="fa-solid fa-up-right-from-square fa-2xs"></i></h1>
                         </a>
                     </div>
