--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
         <div class="">
             <div class="row ">
                 <div class="col-md-2 minorprojecthead">
-                    <a href="/index.html">
+                    <a href="index.html">
 
                         <h1>
                             <i class="fa-solid fa-arrow-left"></i>
